# CppDecimal

./: .gitignore  .gitmodules
src/: CMakeLists.txt  DecContext.cc  DecNumber.hh  short_alloc.h
tst/dectests/: CMakeLists.txt
